fix align

--- a/src/components/AccessTable/index.module.less
+++ b/src/components/AccessTable/index.module.less
@@ -55,5 +55,6 @@
 
 .paragraph {
   margin-bottom: 0 !important;
+  vertical-align: middle;
   &:extend(.value);
 }
